src/ast/generated/HaoLangParser.cpp

// Generated from D:/buildLang/src/ast/HaoLangParser.g4 by ANTLR 4.13.2


#include "HaoLangParserVisitor.h"

#include "HaoLangParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct HaoLangParserStaticData final {
  HaoLangParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  HaoLangParserStaticData(const HaoLangParserStaticData&) = delete;
  HaoLangParserStaticData(HaoLangParserStaticData&&) = delete;
  HaoLangParserStaticData& operator=(const HaoLangParserStaticData&) = delete;
  HaoLangParserStaticData& operator=(HaoLangParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag haolangparserParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<HaoLangParserStaticData> haolangparserParserStaticData = nullptr;

void haolangparserParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (haolangparserParserStaticData != nullptr) {
    return;
  }
#else
  assert(haolangparserParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<HaoLangParserStaticData>(
    std::vector<std::string>{
      "compilationUnit", "packageDecl", "importDecl", "qualifiedName", "topLevelDecl", 
      "delegateDecl", "enumDecl", "enumConstant", "funcDecl", "linkDecl", 
      "returnType", "paramList", "param", "typeParams", "whereClause", "whereBinding", 
      "modifier", "classDecl", "classBase", "interfaceDecl", "typeList", 
      "classMember", "staticCtorDecl", "interfaceMember", "constructorDecl", 
      "propertyDecl", "accessor", "fieldDecl", "annotationUse", "annotationArgs", 
      "annotationArg", "annotationDecl", "annotationMember", "type", "baseType", 
      "typeArg", "typeArgs", "block", "statement", "haoroutineStmt", "selectStmt", 
      "selectCase", "selectComm", "varDecl", "ifStmt", "whileStmt", "forStmt", 
      "whenStmt", "whenBranch", "returnStmt", "breakStmt", "continueStmt", 
      "tryStmt", "catchClause", "finallyClause", "throwStmt", "exprStmt", 
      "exprList", "expr", "assignExpr", "assignOp", "ternaryExpr", "nullCoalesceExpr", 
      "orExpr", "andExpr", "bitOrExpr", "bitXorExpr", "bitAndExpr", "equalityExpr", 
      "relationalExpr", "shiftExpr", "additiveExpr", "multiplicativeExpr", 
      "unaryExpr", "postfixExpr", "postfixOp", "argList", "arg", "primary", 
      "lambda", "lambdaParams", "arrayLiteral", "arrayElementList", "arrayElement", 
      "literal", "templateString", "templatePart"
    },
    std::vector<std::string>{
      "", "'package'", "'import'", "'extern'", "'func'", "'class'", "'interface'", 
      "'enum'", "'extends'", "'implements'", "'constructor'", "'val'", "'var'", 
      "'new'", "'public'", "'private'", "'protected'", "'internal'", "'static'", 
      "'abstract'", "'override'", "'virtual'", "'async'", "'delegate'", 
      "'if'", "'else'", "'while'", "'for'", "'in'", "'when'", "'return'", 
      "'break'", "'continue'", "'try'", "'catch'", "'finally'", "'throw'", 
      "'haoroutine'", "'select'", "'case'", "'default'", "'this'", "'super'", 
      "'is'", "'as'", "'true'", "'false'", "'null'", "'where'", "'\\u003F\\u003F='", 
      "'\\u003F\\u003F'", "'->'", "'+='", "'-='", "'*='", "'/='", "'%='", 
      "'&='", "'|='", "'^='", "'<<='", "'>>='", "'++'", "'--'", "'=='", 
      "'!='", "'<='", "'>='", "'<<'", "'&&'", "'||'", "'='", "'+'", "'-'", 
      "'*'", "'/'", "'%'", "'!'", "'~'", "'&'", "'|'", "'^'", "'<'", "'>'", 
      "'\\u003F'", "':'", "';'", "','", "'...'", "'.'", "", "", "'@'", "'('", 
      "')'", "'['", "']'", "", "'}'", "'$\"'"
    },
    std::vector<std::string>{
      "", "PACKAGE", "IMPORT", "EXTERN", "FUNC", "CLASS", "INTERFACE", "ENUM", 
      "EXTENDS", "IMPLEMENTS", "CONSTRUCTOR", "VAL", "VAR", "NEW", "PUBLIC", 
      "PRIVATE", "PROTECTED", "INTERNAL", "STATIC", "ABSTRACT", "OVERRIDE", 
      "VIRTUAL", "ASYNC", "DELEGATE", "IF", "ELSE", "WHILE", "FOR", "IN", 
      "WHEN", "RETURN", "BREAK", "CONTINUE", "TRY", "CATCH", "FINALLY", 
      "THROW", "HAOROUTINE", "SELECT", "CASE", "DEFAULT", "THIS", "SUPER", 
      "IS", "AS", "TRUE", "FALSE", "NULL_LIT", "WHERE", "QQ_ASSIGN", "QQ", 
      "ARROW", "PLUS_ASSIGN", "MINUS_ASSIGN", "STAR_ASSIGN", "SLASH_ASSIGN", 
      "PCT_ASSIGN", "AMP_ASSIGN", "PIPE_ASSIGN", "CARET_ASSIGN", "LSHIFT_ASSIGN", 
      "RSHIFT_ASSIGN", "INCR", "DECR", "EQ", "NEQ", "LE", "GE", "LSHIFT", 
      "AND_AND", "OR_OR", "ASSIGN", "PLUS", "MINUS", "STAR", "SLASH", "PCT", 
      "BANG", "TILDE", "AMP", "PIPE", "CARET", "LT", "GT", "QUESTION", "COLON", 
      "SEMI", "COMMA", "ELLIPSIS", "DOT", "VERBATIM_TEMPLATE_START", "VERBATIM_STRING", 
      "AT", "LPAREN", "RPAREN", "LBRACK", "RBRACK", "LBRACE", "RBRACE", 
      "TEMPLATE_START", "STRING_LIT", "CHAR_LIT", "FLOAT_LIT", "INT_LIT", 
      "IDENT", "LINE_COMMENT", "BLOCK_COMMENT", "WS", "UNKNOWN_CHAR", "TEMPLATE_END", 
      "TEMPLATE_INTERP_START", "TEMPLATE_TEXT"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  haolangparserParserStaticData = std::move(staticData);
}

}

HaoLangParser::HaoLangParser(TokenStream *input) : HaoLangParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

HaoLangParser::HaoLangParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  HaoLangParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *haolangparserParserStaticData->atn, haolangparserParserStaticData->decisionToDFA, haolangparserParserStaticData->sharedContextCache, options);
}

HaoLangParser::~HaoLangParser() {
  delete _interpreter;
}

const atn::ATN& HaoLangParser::getATN() const {
  return *haolangparserParserStaticData->atn;
}

std::string HaoLangParser::getGrammarFileName() const {
  return "HaoLangParser.g4";
}

const std::vector<std::string>& HaoLangParser::getRuleNames() const {
  return haolangparserParserStaticData->ruleNames;
}

const dfa::Vocabulary& HaoLangParser::getVocabulary() const {
  return haolangparserParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView HaoLangParser::getSerializedATN() const {
  return haolangparserParserStaticData->serializedATN;
}


//----------------- CompilationUnitContext ------------------------------------------------------------------

HaoLangParser::CompilationUnitContext::CompilationUnitContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* HaoLangParser::CompilationUnitContext::EOF() {
  return getToken(HaoLangParser::EOF, 0);
}

HaoLangParser::PackageDeclContext* HaoLangParser::CompilationUnitContext::packageDecl() {
  return getRuleContext<HaoLangParser::PackageDeclContext>(0);
}

std::vector<HaoLangParser::ImportDeclContext *> HaoLangParser::CompilationUnitContext::importDecl() {
  return getRuleContexts<HaoLangParser::ImportDeclContext>();
}

HaoLangParser::ImportDeclContext* HaoLangParser::CompilationUnitContext::importDecl(size_t i) {
  return getRuleContext<HaoLangParser::ImportDeclContext>(i);
}

std::vector<HaoLangParser::TopLevelDeclContext *> HaoLangParser::CompilationUnitContext::topLevelDecl() {
  return getRuleContexts<HaoLangParser::TopLevelDeclContext>();
}

HaoLangParser::TopLevelDeclContext* HaoLangParser::CompilationUnitContext::topLevelDecl(size_t i) {
  return getRuleContext<HaoLangParser::TopLevelDeclContext>(i);
}


size_t HaoLangParser::CompilationUnitContext::getRuleIndex() const {
  return HaoLangParser::RuleCompilationUnit;
}


std::any HaoLangParser::CompilationUnitContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<HaoLangParserVisitor*>(visitor))
    return parserVisitor->visitCompilationUnit(this);
  else
    return visitor->visitChildren(this);
}

HaoLangParser::CompilationUnitContext* HaoLangParser::compilationUnit() {
  CompilationUnitContext *_localctx = _tracker.createInstance<CompilationUnitContext>(_ctx, getState());
  enterRule(_localctx, 0, HaoLangParser::RuleCompilationUnit);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(175);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == HaoLangParser::PACKAGE) {
      setState(174);
      packageDecl();
    }
    setState(180);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == HaoLangParser::IMPORT) {
      setState(177);
      importDecl();
      setState(182);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(186);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 16767224) != 0) || _la == HaoLangParser::AT) {
      setState(183);
      topLevelDecl();
      setState(188);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(189);
    match(HaoLangParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PackageDeclContext ------------------------------------------------------------------

HaoLangParser::PackageDeclContext::PackageDeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* HaoLangParser::PackageDeclContext::PACKAGE() {
  return getToken(HaoLangParser::PACKAGE, 0);
}

HaoLangParser::QualifiedNameContext* HaoLangParser::PackageDeclContext::qualifiedName() {
  return getRuleContext<HaoLangParser::QualifiedNameContext>(0);
}

tree::TerminalNode* HaoLangParser::PackageDeclContext::SEMI() {
  return getToken(HaoLangParser::SEMI, 0);
}


size_t HaoLangParser::PackageDeclContext::getRuleIndex() const {
  return HaoLangParser::RulePackageDecl;
}


std::any HaoLangParser::PackageDeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<HaoLangParserVisitor*>(visitor))
    return parserVisitor->visitPackageDecl(this);
  else
    return visitor->visitChildren(this);
}

HaoLangParser::PackageDeclContext* HaoLangParser::packageDecl() {
  PackageDeclContext *_localctx = _tracker.createInstance<PackageDeclContext>(_ctx, getState());
  enterRule(_localctx, 2, HaoLangParser::RulePackageDecl);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(191);
    match(HaoLangParser::PACKAGE);
    setState(192);
    qualifiedName();
    setState(194);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == HaoLangParser::SEMI) {
      setState(193);
      match(HaoLangParser::SEMI);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ImportDeclContext ------------------------------------------------------------------

HaoLangParser::ImportDeclContext::ImportDeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* HaoLangParser::ImportDeclContext::IMPORT() {
  return getToken(HaoLangParser::IMPORT, 0);
}

HaoLangParser::QualifiedNameContext* HaoLangParser::ImportDeclContext::qualifiedName() {
  return getRuleContext<HaoLangParser::QualifiedNameContext>(0);
}

tree::TerminalNode* HaoLangParser::ImportDeclContext::DOT() {
  return getToken(HaoLangParser::DOT, 0);
}

tree::TerminalNode* HaoLangParser::ImportDeclContext::STAR() {
  return getToken(HaoLangParser::STAR, 0);
}

tree::TerminalNode* HaoLangParser::ImportDeclContext::AS() {
  return getToken(HaoLangParser::AS, 0);
}

tree::TerminalNode* HaoLangParser::ImportDeclContext::IDENT() {
  return getToken(HaoLangParser::IDENT, 0);
}

tree::TerminalNode* HaoLangParser::ImportDeclContext::SEMI() {
  return getToken(HaoLangParser::SEMI, 0);
}


size_t HaoLangParser::ImportDeclContext::getRuleIndex() const {
  return HaoLangParser::RuleImportDecl;
}


std::any HaoLangParser::ImportDeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<HaoLangParserVisitor*>(visitor))
    return parserVisitor->visitImportDecl(this);
  else
    return visitor->visitChildren(this);
}

HaoLangParser::ImportDeclContext* HaoLangParser::importDecl() {
  ImportDeclContext *_localctx = _tracker.createInstance<ImportDeclContext>(_ctx, getState());
  enterRule(_localctx, 4, HaoLangParser::RuleImportDecl);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(196);
    match(HaoLangParser::IMPORT);
    setState(197);
    qualifiedName();
    setState(200);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == HaoLangParser::DOT) {
      setState(198);
      match(HaoLangParser::DOT);
      setState(199);
      match(HaoLangParser::STAR);
    }
    setState(204);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == HaoLangParser::AS) {
      setState(202);
      match(HaoLangParser::AS);
      setState(203);
      match(HaoLangParser::IDENT);
    }
    setState(207);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == HaoLangParser::SEMI) {
      setState(206);
      match(HaoLangParser::SEMI);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- QualifiedNameContext ------------------------------------------------------------------

HaoLangParser::QualifiedNameContext::QualifiedNameContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> HaoLangParser::QualifiedNameContext::IDENT() {
  return getTokens(HaoLangParser::IDENT);
}

tree::TerminalNode* HaoLangParser::QualifiedNameContext::IDENT(size_t i) {
  return getToken(HaoLangParser::IDENT, i);
}

std::vector<tree::TerminalNode *> HaoLangParser::QualifiedNameContext::DOT() {
  return getTokens(HaoLangParser::DOT);
}

tree::TerminalNode* HaoLangParser::QualifiedNameContext::DOT(size_t i) {
  return getToken(HaoLangParser::DOT, i);
}


size_t HaoLangParser::QualifiedNameContext::getRuleIndex() const {
  return HaoLangParser::RuleQualifiedName;
}


std::any HaoLangParser::QualifiedNameContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<HaoLangParserVisitor*>(visitor))
    return parserVisitor->visitQualifiedName(this);
  else
    return visitor->visitChildren(this);
}

HaoLangParser::QualifiedNameContext* HaoLangParser::qualifiedName() {
  QualifiedNameContext *_localctx = _tracker.createInstance<QualifiedNameContext>(_ctx, getState());
  enterRule(_localctx, 6, HaoLangParser::RuleQualifiedName);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(209);
    match(HaoLangParser::IDENT);
    setState(214);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 7, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(210);
        match(HaoLangParser::DOT);
        setState(211);
        match(HaoLangParser::IDENT); 
      }
      setState(216);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 7, _ctx);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TopLevelDeclContext ------------------------------------------------------------------

HaoLangParser::TopLevelDeclContext::TopLevelDeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

HaoLangParser::FuncDeclContext* HaoLangParser::TopLevelDeclContext::funcDecl() {
  return getRuleContext<HaoLangParser::FuncDeclContext>(0);
}

HaoLangParser::ClassDeclContext* HaoLangParser::TopLevelDeclContext::classDecl() {
  return getRuleContext<HaoLangParser::ClassDeclContext>(0);
}

HaoLangParser::InterfaceDeclContext* HaoLangParser::TopLevelDeclContext::interfaceDecl() {
  return getRuleContext<HaoLangParser::InterfaceDeclContext>(0);
}

HaoLangParser::EnumDeclContext* HaoLangParser::TopLevelDeclContext::enumDecl() {
  return getRuleContext<HaoLangParser::EnumDeclContext>(0);
}

HaoLangParser::FieldDeclContext* HaoLangParser::TopLevelDeclContext::fieldDecl() {
  return getRuleContext<HaoLangParser::FieldDeclContext>(0);
}

HaoLangParser::DelegateDeclContext* HaoLangParser::TopLevelDeclContext::delegateDecl() {
  return getRuleContext<HaoLangParser::DelegateDeclContext>(0);
}

HaoLangParser::AnnotationDeclContext* HaoLangParser::TopLevelDeclContext::annotationDecl() {
  return getRuleContext<HaoLangParser::AnnotationDeclContext>(0);
}


size_t HaoLangParser::TopLevelDeclContext::getRuleIndex() const {
  return HaoLangParser::RuleTopLevelDecl;
}

